<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BD CLEAN</string>
    <string name="contact">Contact</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="app_language">English</string>
    <string name="new_member">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="member_registration">MEMBER REGISTRATION</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="cancel">cancel</string>
    <string name="next">Next</string>
    <string name="choose_gender">Gender</string>
    <string name="choose_religion">Religion</string>
    <string name="choose_occupation">Occupation</string>
    <string name="user_name">User Name</string>
    <string name="sign_in_to_your_account">sign in to your account</string>
    <string name="nid_no">NID No.</string>
    <string name="open">OPEN.</string>
    <string name="close">Close</string>
    <string name="activity_log">Activity Log</string>
    <string name="events">Events</string>
    <string name="create_new_complain">Create New Complain</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Leanback MainActivity2</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="social_media_post">SOCIAL MEDIA POST</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="select_photos">Select Photos</string>
    <string name="post">CREATE</string>
    <string name="back">Back</string>
    <string name="choose_monitor">Division</string>
    <string name="choose_position">Select Position</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_member">create member</string>
    <string name="our_events">our events</string>
    <string name="are_you_a_member">ARE YOU A MEMBER?</string>
    <string name="slogan">Slogan</string>
    <string name="slogan_text">:  Let the Cleanliness Starts from me</string>
    <string name="goal">Goal</string>
    <string name="goal_txt">Our goal is to build a clean and sterile Bangladesh by increasing public awareness of using dustbins to change people’s mentality and habit of throwing garbage everywhere.</string>
    <string name="purpose">Purpose</string>
    <string name="purpose_txt">The main purpose of BD Clean is to establish the status of Bangladesh as one of the cleanest countries to the outside world and to set every citizen of Bangladesh as an example of an ideal citizen worldwide.</string>
    <string name="characteristics">BD Clean Member’s Characteristics</string>
    <string name="history_txt">Obeying constitutional civic responsibilities is one of the hallmarks of all members of
                                BD Clean. All members of BD Clean are always striving to achieve the reputation of an ideal citizen of Bangladesh to the
                                world. Free from greed, envy and malice, every member of BD Clean respects each other. No member blames each other or the
                                state to avoid civic responsibility. Not the enforcement of the law but every member of BD Clean believes in following all the
                                laws prevailing in the country. In addition, every member who is always active in the service of humanity and country is a
                                unique example in protecting the unity and order of the country. In one word, every member of BD Clean is an ideal citizen of
                                Bangladesh and the whole world.</string>
    <string name="membership_qualification">Membership Qualifications</string>
    <string name="changes_txt">Any Bangladeshi citizen of any age who is willing to volunteer for the country is eligible to
                                become a member of BD Clean, subject to accepting the rules and regulations of BD Clean. However, his membership will be
                                canceled without notice if he is involved in any anti-state work or expresses opposition to any development work of the state. In
                                addition, indecent behavior and violent attitude towards any member along with disobeying the organizational order will result
                                in the issuance of show cause notice or termination of membership subject to proof.</string>
    <string name="join_event_warning">You are already joined in an event, which is not completed yet. To join event you have to complete or leave from previous event.</string>
    <string name="facebook_application_id">927098548536128</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">3b38aa400c6c1130e6f2ece379d7bd75</string>
    <string name="be_a_member">Be a Member</string>
    <string name="honorary_member">honorary member</string>
    <string name="goodwill_ambassador">Be an Ambassador</string>
    <string name="terms_tv_1">To become a member through this app, you will need to agree to the terms of services below.\n\nIn addition, when you create an account, we process your information as described in our privacy policy including this key steps :</string>
    <string name="step_1">Step 1</string>
    <string name="step_tv_1">For the first time, you have to join a event after you accept terms and condition. You have to complete the event and leave from event within time. After completing the event, a monitor will approve your event joining. After that you have to join in an event again.</string>
    <string name="step_tv_2">After completing four events, a monitor will evaluate your events and approve all event. Then you will be counted as an active member of the organization</string>
    <string name="step_tv_3">After becoming a member, you have to buy a T-Shirt of the company from the store with bKash.</string>
    <string name="no_of_event_completed">Total step completed : </string>
    <string name="otp_tv">We have sent a code to your contact number to confirm your phone. Please insert the code for confirmation</string>
    <string name="user_info_tv_1">New member registration form</string>
    <string name="complain_instructions">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam faucibus mi in ipsum mattis, eget ultrices arcu placerat. Aenean malesuada consequat malesuada. Suspendisse condimentum blandit nibh.</string>
    <string name="father_name">Father\'s name</string>
    <string name="mother_name">Mother\'s name</string>
    <string name="father_contact">Father\'s contact</string>
    <string name="mother_contact">Mother\'s contact</string>
    <string name="nationality">Nationality</string>
    <string name="highest_education">Highest education</string>
    <string name="education_institute">education institute</string>
    <string name="facebook_id_link">Facebook id link</string>
    <string name="blood_group">Blood group</string>
    <string name="shirt_size">T-Shirt Size</string>
    <string name="current_institute">current institute</string>
    <string name="location_guideline">Please select your current location in which area you want to join BD CLEAN events ( division , district / metropolitan , upazilla / city corporation, union / ward, and village / area .\n\nIf you live in rural area then select district , upazilla, union and village.\n\nIf you live in metropolitan area select metropolitan , city corporation , ward and area / locality</string>
    <string name="create_election_panel">Create Election Session</string>
    <string name="enter_your_mobile_number">Enter your mobile number.</string>
    <string name="date_of_establishment">Date of Establishment and Number of Members</string>
    <string name="establishment_text">Established on 3 June 2016, this platform currently (as of 3 June 2023) has more than 44,000 active volunteer members working relentlessly to achieve the goals of BD Clean.</string>
    <string name="oath">Oath</string>
    <string name="oath_text">I swear to always devote myself to the service of the people and loyalty to the country. I will always strive to maintain the unity and order of the country. I will always dedicate myself to build a clean Bangladesh. Let us be aware that no one around us should throw garbage everywhere. Will always fulfill the constitutional civic duty. All laws in the country will be obeyed. O Lord, give me strength, so that I can serve the country and make Bangladesh a clean, strong and ideal state. Amen</string>
    <string name="bd_clean_series_of_activities">BD Clean Series of Activities</string>
    <string name="activity_seris_text">BD Clean selects a specific area on one day every week to clean the area directly or through miking to give awareness to the nearby shopkeepers and general public about not littering and advising on the use of dustbins. Also, each week\'s series of activities begins with a group photo and recitation of the oath with the participation of all the volunteers present.</string>
    <string name="benefits_of_a_clean_bangladesh">Benefits of a Clean Bangladesh</string>
    <string name="benefit_text">Clean cities have 46% less germs than unclean cities. As a result, all the people of the country will be protected from the attack of 46% of diseases. Above all, a healthy and clean environment will be ensured for the next generation. Also, the name of our beloved homeland Bangladesh will take place on the world map as a clean country</string>
    <string name="dream_to_clean_bangladesh">Dream to Clean Bangladesh</string>
    <string name="description">BD Clean is the platform of voluntary conscious citizens who are continuously working to build a clean and sterile Bangladesh.</string>
    <string name="base">Base</string>
    <string name="bdclean_name">BD Clean</string>
    <string name="submit">Submit</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="phone">Phone</string>
    <string name="new_password">New Password</string>
    <string name="find_account">Find Account</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="about_bd_clean">About BD Clean</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="certificate_name">Certificate name</string>
    <string name="election_start_date">Election Start date</string>
    <string name="election_end_date">Election End date</string>
    <string name="position_title">Position title</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="are_you_sure_you_want_to_join_this_event">ARE YOU SURE YOU WANT TO JOIN THIS EVENT?</string>
    <string name="language_txt">English</string>
    <string name="notice_form">Notice Form</string>
    <string name="choose_receiver_type">Choose receiver type</string>
    <string name="select">Select</string>
    <string name="notice_subject">Notice Subject</string>
    <string name="notice_body">Notice Body</string>
    <string name="clear">Clear</string>
</resources>