<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ForgotPasswordActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_alignParentTop="true"
        app:title="@string/bdclean_name"
        app:titleTextAppearance="@style/Toolbar.TitleText">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_toolbar"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_your_account"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="@font/bdclean_bold"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/numberTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_mobile_number"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/bdclean"
            android:textStyle="normal"
            android:gravity="center"
            android:padding="5dp"
            />


        <EditText
            android:id="@+id/forgot_contact"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:inputType="phone"
            android:fontFamily="@font/bdclean"
            android:importantForAutofill="no"
            android:layout_marginTop="5dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/white_2"
            android:hint="@string/phone"
            android:textSize="14sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/password_forgot"
            android:layout_width="match_parent"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textColorHint="@color/hint_color"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:fontFamily="@font/bdclean"
            android:textColor="@color/white_2"
            android:importantForAutofill="no"
            android:hint="@string/new_password"
            android:visibility="gone"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/confirm_password_forgot"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textColorHint="@color/hint_color"
            android:fontFamily="@font/bdclean"
            android:textColor="@color/white_2"
            android:hint="@string/confirm_password"
            android:visibility="gone"
            android:importantForAutofill="no"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:fontFamily="@font/bdclean_bold"
            android:textColor="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:visibility="gone"
            />


        <Button
            android:id="@+id/find_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/find_account"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:fontFamily="@font/bdclean_bold"
            android:textColor="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:visibility="visible"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/red" />

</RelativeLayout>