<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:background="@color/green_4"/>

        <ImageView
            android:id="@+id/bd_clean_logo"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/bdclean_logo_3"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/notice_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice_form"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:fontFamily="@font/bdclean_bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_below="@+id/bd_clean_logo"/>

        <RelativeLayout
            android:id="@+id/ll_2"
            android:layout_below="@+id/notice_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_background"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/choose_receiver_type"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:fontFamily="@font/bdclean"
                android:textColor="@color/text_color"/>

            <Button
                android:id="@+id/select_receiver"
                android:layout_width="200dp"
                android:background="@null"
                android:text="@string/select"
                android:textSize="14sp"
                android:fontFamily="@font/bdclean"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:drawableEnd="@drawable/icon_dropdown"
                android:paddingHorizontal="20dp"
                android:layout_height="35dp"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/notice_subject"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/ll_2"
            android:layout_marginTop="9dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/bdclean"
            android:hint="@string/notice_subject"
            android:inputType="text|textMultiLine"
            android:paddingHorizontal="15dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/notice_body"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/notice_subject"
            android:layout_marginTop="9dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/bdclean"
            android:hint="@string/notice_body"
            android:inputType="text|textMultiLine"
            android:textSize="14sp"
            android:gravity="start|top"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notice_body"
            android:id="@+id/ll_1"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_btn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:backgroundTint="@color/green_2"
                android:layout_weight="1"
                android:background="@drawable/button_shape_4"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:backgroundTint="@color/red"
                android:layout_weight="1"
                android:background="@drawable/button_shape_4"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>