<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    android:layout_marginHorizontal="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/green_4"/>

        <ImageView
            android:id="@+id/sign_up_logo"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/bdclean_logo_3"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/layout_2"
            android:layout_below="@+id/sign_up_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/login_dialog_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/bdclean"
                android:gravity="center"
                android:padding="10dp"/>


            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_height="48dp"
                android:background="@drawable/edittext_background"
                android:inputType="text"
                android:fontFamily="@font/bdclean"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:hint="@string/certificate_name"
                android:textSize="14sp"
                android:paddingStart="15dp"/>

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_height="48dp"
                android:background="@drawable/edittext_background"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/bdclean"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:hint="@string/email"
                android:textSize="14sp"
                android:paddingStart="15dp"/>

            <EditText
                android:id="@+id/user_contact"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_height="48dp"
                android:background="@drawable/edittext_background"
                android:inputType="phone"
                android:fontFamily="@font/bdclean"
                android:importantForAutofill="no"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:hint="@string/phone"
                android:textSize="14sp"
                android:paddingStart="15dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:fontFamily="@font/bdclean"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:hint="@string/password"
                android:textSize="14sp"
                android:paddingStart="15dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:fontFamily="@font/bdclean"
                android:textColor="@color/black"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:textSize="14sp"
                android:paddingStart="15dp"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:fontFamily="@font/bdclean_bold"
                android:textColor="@color/black"
                android:layout_marginVertical="20dp"
                android:textSize="16sp"
                android:background="@drawable/edittext_background"
                />

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>