<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    app:cardBackgroundColor="#2b4c77"
    app:cardElevation="2dp"
    app:cardMaxElevation="2dp"
    app:contentPadding="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_join_this_event"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:fontFamily="@font/roboto_black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_1"
            android:padding="10dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yes_btn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/green_2"
                android:layout_weight="1"
                android:background="@drawable/button_shape_5"
                android:text="@string/yes"
                android:textSize="12sp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/no_btn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/red"
                android:layout_weight="1"
                android:background="@drawable/button_shape_6"
                android:text="@string/no"
                android:textSize="12sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>